--- a/src/arm/BB-W1-P9.12-00A0.dts
+++ b/src/arm/BB-W1-P9.12-00A0.dts
@@ -26,6 +26,7 @@
         P9_12_pinmux { status = "disabled"; };  /* P9_12 (U18) gpmc_be1n.gpio1_28 */
         P9_11_pinmux { status = "disabled"; };  /* P9_12 (U18) gpmc_be1n.gpio1_28 */
         P9_13_pinmux { status = "disabled"; };  /* P9_12 (U18) gpmc_be1n.gpio1_28 */
+	P9_14_pinmux { status = "disabled"; };  /* P9_12 (U18) gpmc_be1n.gpio1_28 */
 };
 
 &am33xx_pinmux {
@@ -44,6 +45,12 @@
          bb_dallas_w1_3pins: pinmux_bb_dallas_w1_3pins {
                 pinctrl-single,pins = <
                         AM33XX_PADCONF(AM335X_PIN_GPMC_WPN, PIN_INPUT_PULLUP, MUX_MODE7)       /* P8_28 (U18) gpmc_be1n.gpio1_24 */
+
+                >;
+        };
+	 bb_dallas_w1_4pins: pinmux_bb_dallas_w1_4pins {
+                pinctrl-single,pins = <
+                        AM33XX_PADCONF(AM335X_PIN_GPMC_A2, PIN_INPUT_PULLUP, MUX_MODE7)       /* P8_28 (U18) gpmc_be1n.gpio1_24 */
 
                 >;
         };
@@ -74,6 +81,14 @@
 
                 compatible = "w1-gpio";
                 gpios = <&gpio0 31 GPIO_ACTIVE_HIGH>;
+        };
+	onewire4 {
+                status = "okay";
+                pinctrl-names = "default";
+                pinctrl-0 = <&bb_dallas_w1_4pins>;
+
+                compatible = "w1-gpio";
+                gpios = <&gpio1 18 GPIO_ACTIVE_HIGH>;
         };
 
 };
